Fix mobile menu and appointment z-index (#64)

--- a/src/app/components/appointement-modal/appointement-modal.component.scss
+++ b/src/app/components/appointement-modal/appointement-modal.component.scss
@@ -32,12 +32,6 @@
   .select-actions{
     padding: 0 15px 35px 15px;
     position: relative;
-    .search-city {
-      position: absolute;
-      top:37px;
-      left: 12px;
-      z-index: 9999;
-    }
   }
 
 ::ng-deep .ng-select .ng-select-container .ng-value-container .ng-placeholder {
@@ -46,14 +40,6 @@
     font-style: normal;
     font-weight: normal;
 }
-
- ::ng-deep ng-select .ng-select-container > .ng-value-container {
-    //padding: .375rem 2.25rem !important;
-  }
-
-  ::ng-deep .ng-select.ng-select-multiple .ng-select-container .ng-value-container {
-    padding: 0.375rem 2.25rem !important;
-  }
   
   ::ng-deep ng-select .ng-select-container > .ng-value-container > div[role="combobox"] {
     padding: 0 !important;
